syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "trb_officer_backend";

package loan;

service LoanService {
  rpc GetLoanList (GetLoanListRequest) returns (GetLoanListReply);
}

// Get Loan List
message GetLoanListRequest{}
message GetLoanListReply{
  repeated common.LoanShort loan = 1;
}